--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -1,4 +1,4 @@
-div.shop{
+div.gallery{
     /* padding-top: 20px; */
     /* height: 100vh;  */
     /*  TO REMOVE!!!!!!!!*/
@@ -6,7 +6,7 @@ div.shop{
     background: black;
 }
 
-div.shop-gallery{
+div.gallery-gallery{
     position: relative;
     /* margin-top: 50px; */
     padding: 50px 15px 0 15px;
