--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -59,3 +59,10 @@
         padding-top: 20px;
     }
 }
+
+
+@media only screen and (min-width: 992px){
+    div.about {
+        padding-top: 5rem;
+    }
+}
