--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -25,6 +25,7 @@
     padding-left: 10px;
     border: 1px solid white;
     border-bottom: none;
+    cursor: pointer;
 }
 
 .toolbar-border > span {
