--- a/src/components/Shop/Controls/Control/Control.css
+++ b/src/components/Shop/Controls/Control/Control.css
@@ -11,7 +11,7 @@ div.gallery-control-container div.select-container{
 div.gallery-control-container div.select-container div.select-label{
     position: relative;
     z-index: 3;
-    padding: 0 20px;
+    padding: 0;
     width: 100%;
     font-size: 1.3rem;
 }
@@ -28,6 +28,7 @@ div.gallery-control-container div.select-container div.select-options-wrapp div.
     position: relative;
     z-index: 3;
     width: 100%;
+    cursor: pointer;
 }
 
 div.gallery-control-container div.select-container div.select-options-wrapp div.select-value-container span,
@@ -57,6 +58,7 @@ div.gallery-control-container div.select-container div.select-options-wrapp div.
     width: 100%;
     height: 0;
     /* overflow: hidden; */
+    cursor: pointer;
     transition: height 0.1s ease-in-out, z-index .5s;
 }
 
@@ -73,6 +75,12 @@ div.gallery-control-container div.select-container div.select-options-wrapp div.
     opacity: 0;
     transition: all 0.5s ease-in-out;
 }
+
+div.gallery-control-container div.select-container div.select-options-wrapp div.select-options-container div.option:hover svg{
+    transform: rotate3d(0, 1, 0, 180deg);
+    transition: transform 0.8s;
+}
+
 
 div.gallery-control-container div.select-container.show div.select-options-wrapp div.select-options-container div.option{
     opacity: 1;
@@ -121,9 +129,6 @@ div.gallery-control-container div.control-box{
 
 
 @media only screen and (min-width: 600px){
-    div.gallery div.gallery-controls div.gallery-control-container{
-        width: 33.33%
-    }
     div.gallery-control-container div.select-container div.select-options-wrapp div.select-value-container span,
 div.gallery-control-container div.select-container div.select-options-wrapp div.select-options-container div.option span{
     width: 80%;
@@ -134,3 +139,8 @@ div.select-svg-container{
 }
 
 
+@media only screen and (min-width: 700px){
+    div.gallery div.gallery-controls div.gallery-control-container{
+        width: 33.33%
+    }
+}
