--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -66,10 +66,11 @@
         display: block;
         width: 100%;
         height: 5rem;
+        background: rgba(0,0,0,0);
         transition: top 0.9s;
         z-index: 2;
     }
-    .desk-only::after{
+    /* .desk-only::after{
         content: '';
         position: absolute;
         top: -10rem;
@@ -79,7 +80,7 @@
         background: rgba(0, 0, 0, 0.5);
         z-index: 1;
         transition: height 0.3s;
-    }
+    } */
 
     .toolbar.show-menu .desk-only::after {
         height: 15rem;
@@ -89,5 +90,39 @@
     }
 }
 
+
+@media only screen and (min-width: 992px){
+    div.toolbar div.desk-only.shadow {
+            animation-duration: 1s;
+            animation-name: shadow;
+            animation-fill-mode: forwards;
+            /* animation-iteration-count: infinite; */
+            /* animation-direction: alternate; */
+    }
+    div.toolbar.show-menu div.desk-only.shadow {
+        animation: none;
+    }
+}
+
+
+@keyframes shadow {
+    0% {
+        top: 11rem;
+    }
+    12%{
+        top: -11rem;
+
+    }
+    70%{
+        top: 11.5rem;
+        background: rgba(0,0,0,0.3);
+
+    }
+    100%{
+        top: 11rem;
+        background: rgba(0,0,0,0.3);
+
+    }
+}
 
 
