--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,6 +1,6 @@
 .about {
     position: relative;
-    bottom: calc(100vh - 9rem);
+    bottom: 0;
     z-index: 3;
     display: inline-flex;
     flex-direction: column;
@@ -12,6 +12,10 @@
     padding:0 20px 60px 20px;
     background: black;
     /* padding: 0 35px 0 30px; */
+}
+
+div.home div.about{
+    bottom: calc(100vh - 9rem);
 }
 
 .about-header-container{
@@ -114,8 +118,10 @@ div.about div.about-img-container {
 
 @media only screen and (min-width: 992px){
     div.about {
-        bottom: 100vh;
         padding-top: 5rem;
         min-height: 100vh;
+    }
+    div.home div.about {
+        bottom: 100vh;
     }
 }
