--- a/src/components/Contacts/Contacts.css
+++ b/src/components/Contacts/Contacts.css
@@ -17,7 +17,7 @@ div.contacts::after{
     bottom: 0;
     background-image: url('../../assets/images/map-of-the-world-2401458_1920.jpg');
     background-position: center;
-    /* filter: grayscale(100%); */
+    filter: grayscale(80%);
     z-index: -1;
     opacity: 0.1;
 }
@@ -32,7 +32,7 @@ div.contacts > div.contacts-wrapp div.contacts-details{
     align-items: center;
     width: 458px;
     max-width: 100%;
-    padding: 15px 0px 40px 0px;
+    /* padding: 15px 0px 40px 0px; */
     margin: 0 auto;
     opacity: 0;
     transition: opacity 0.5s;
@@ -71,7 +71,7 @@ div.contacts div.inViewListener{
 
 .contacts div.inViewListener h2 {
     display: inline-block;
-    margin: 1em 0;
+    margin: 0;
     opacity: 0;
     font-size: 2.5rem;
     font-weight: 400;
@@ -143,7 +143,7 @@ div.contacts > div.contacts-wrapp div.contact-btn-container .btn{
         order: 2;
         flex: 40%;
         justify-content: center;
-        padding-top: 0px;
+        /* padding-top: 0px; */
 
     }
 
