gallery error handler

--- a/src/components/Home/FancyGallery/Images/Images.css
+++ b/src/components/Home/FancyGallery/Images/Images.css
@@ -4,6 +4,7 @@ div.img-wrapp{
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center; */
+    position: relative;
     width: 100%;
 }
 
