--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,26 +2,27 @@
     position: relative;
     bottom: 0;
     z-index: 3;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-direction: column;
-    /* flex-wrap: wrap; */
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 100%;
-    /* margin-bottom: 50px; */
     padding:0 20px 60px 20px;
     background: black;
-    /* padding: 0 35px 0 30px; */
 }
-
-/* div.home div.about{
-    bottom: calc(100vh - 9rem);
-} */
 
 .about-header-container{
     position: relative;
     width: 100%;
-    /* background: black; */
     z-index: 3;
     margin-bottom: 50px;
 }
@@ -34,7 +35,6 @@ div.about div.about-img-text-wrapp{
 
 .about-text-container{
     width: 100%;
-    /* padding-right: 35px; */
 }
 
 .about-text-container .paragraph-container h3{
@@ -46,7 +46,6 @@ div.about div.about-img-text-wrapp{
 
 div.about div.about-img-container {
     margin-bottom: 30px;
-    /* padding: 60px 0 30px 0; */
 }
 
 .about > .about-img-text-wrapp > .about-img-container > div.about-img-wrapp{
@@ -65,19 +64,14 @@ div.about div.about-img-container {
 
 @media only screen and (min-width: 768px){
     .about{
-        /* bottom: 0; */
-        /* flex-direction: row;
-        flex-wrap: wrap; */
-        justify-content: flex-start;
-        /* overflow: hidden; */
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
         min-height: calc(100vh - 58px);
     }
-    div.about-header-container{
-        /* margin-bottom: 20px; */
-    }
     div.about div.about-img-text-wrapp{
-        align-self: flex-end;
-        /* flex-direction: row; */
+        -ms-flex-item-align: end;
+            align-self: flex-end;
     }
     div.about div.about-img-container{
         position: absolute;
@@ -98,8 +92,6 @@ div.about div.about-img-container {
     div.about div.about-img-container, 
     div.about div.about-text-container{
         width: 50%;
-        /* margin-top: 20px; */
-        /* padding-top: 20px; */
     }
     div.about div.about-text-container{
         float: right;
@@ -107,7 +99,9 @@ div.about div.about-img-container {
     }
     div.about div.about-img-container div.about-img-wrapp{
         top: 50%;
-        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
     }
     div.about div.about-text-container .paragraph-container h3,
     div.about div.about-text-container .paragraph-container p{
@@ -121,7 +115,4 @@ div.about div.about-img-container {
         padding-top: 5rem;
         min-height: 100vh;
     }
-    /* div.home div.about {
-        bottom: 100vh;
-    } */
 }
