--- a/src/components/Home/FancyGallery/Images/Images.css
+++ b/src/components/Home/FancyGallery/Images/Images.css
@@ -1,29 +1,31 @@
 div.img-wrapp{
-    /* display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center; */
     position: relative;
     width: 100%;
 }
 
 @media only screen and (min-width: 600px){
     div.img-wrapp{
-        /* display: block; */
-        column-count: 2;
-        column-gap: 0px;
+        -webkit-column-count: 2;
+           -moz-column-count: 2;
+                column-count: 2;
+        -webkit-column-gap: 0px;
+           -moz-column-gap: 0px;
+                column-gap: 0px;
     }
 }
 
 @media only screen and (min-width: 992px){
     div.img-wrapp{
-        column-count: 3;
+        -webkit-column-count: 3;
+           -moz-column-count: 3;
+                column-count: 3;
     }
 }
 
 @media only screen and (min-width: 1092px){
     div.img-wrapp{
-        column-count: 4;
+        -webkit-column-count: 4;
+           -moz-column-count: 4;
+                column-count: 4;
     }
 }
