--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -19,7 +19,8 @@
     height: 150vh;
     background: url('../../assets/images/21752617_313159862486220_2846810308660514837_o.jpg') no-repeat center center;
     /* background: url('../../assets/horse_sm.jpg') no-repeat center center; */
-    transform: translateZ(-1px) scale(1.5);
+    -webkit-transform: translateZ(-1px) scale(1.5);
+            transform: translateZ(-1px) scale(1.5);
     background-attachment: fixed;
     /* background-position-x: 20%; */
     /* background-position-y: 20%; */
@@ -81,9 +82,14 @@ div.home > div.about > div.about-img-container{
 }
 
 .home-carousel{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 30px 0;
 }
 
@@ -110,7 +116,9 @@ div.home-carousel.right > div.home-carousel-text-wrapp{
         padding: 0;
     }
     div.home-carousel {
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         max-width: 1800px;
         padding: 0;
         margin: 0 auto;
@@ -118,7 +126,6 @@ div.home-carousel.right > div.home-carousel-text-wrapp{
     div.home-carousel > div.carousel,
     div.home-carousel > div.home-carousel-text-wrapp{
         width: 50%;
-        /* margin: 0 auto 0 0; */
     }
     div.home-carousel > div.home-carousel-text-wrapp{
         margin: 0;
@@ -128,7 +135,9 @@ div.home-carousel.right > div.home-carousel-text-wrapp{
         margin: 0 0 0 auto;
     }
     div.home-carousel.right > div.carousel{
-        order: 2;
+        -webkit-box-ordinal-group: 3;
+            -ms-flex-order: 2;
+                order: 2;
     }
 }
 
