--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,8 +1,14 @@
 .logo{
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 100%;
     height: 4rem;
     padding-top: 0.5rem;
@@ -13,7 +19,6 @@
     background: #000000;
     text-align: center;
     color: gray;
-    /* text-shadow: -1px 1px 1px #660033, 1px 1px 1px #660033, 1px -1px 1px #660033, -1px -1px 1px #660033; */
     z-index: 1000;
 }
 
