--- a/src/components/Navigation/Toolbar/DrawerToggle/DrawerToggle.css
+++ b/src/components/Navigation/Toolbar/DrawerToggle/DrawerToggle.css
@@ -1,79 +1,79 @@
 div.drawerToggle{
-    position: absolute;
-    top: 10px;
-    right: 17px; /*7px toolbar padding + 10px*/
-    bottom: 70px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 30px;
-    height: 4rem;
-    padding: 20px 0px;
-    cursor: pointer;
-    z-index: 2;
+  position: absolute;
+  top: 10px;
+  right: 17px; /*7px toolbar padding + 10px*/
+  bottom: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 30px;
+  height: 4rem;
+  padding: 20px 0px;
+  cursor: pointer;
+  z-index: 2;
 }
 
 div.drawerToggle > div {
-    display: block;
-    width: 100%;
-    height: 2px;
-    background: #ffffff;    
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #ffffff;    
 }
 
 
 @media only screen and (min-width: 992px){
-    .desk-only .drawerToggle{
-        top: -1.2rem;
-        bottom: unset;
-        right: 40px;
-        height: 24px;
-        margin: 48px auto 24px auto;
-        padding: 0px;
-    }
-    .drawerToggle > div {
-          position:absolute;
-          left:0;
-          border-radius: 1px;
-          transition: all 0.2s;
-          -webkit-transition: all 0.2s;
-          -moz-transition: all 0.2s;  
-    }
+  .desk-only .drawerToggle{
+      top: -1.2rem;
+      bottom: unset;
+      right: 40px;
+      height: 24px;
+      margin: 48px auto 24px auto;
+      padding: 0px;
+  }
+  .drawerToggle > div {
+        position:absolute;
+        left:0;
+        border-radius: 1px;
+        -o-transition: all 0.2s;
+        transition: all 0.2s;
+        -webkit-transition: all 0.2s;
+        -moz-transition: all 0.2s;  
+  }
 
-    /* .drawerToggle:hover > div.line-1, .drawerToggle:focus > div.line-1 {
-        transform: translateY(-1);
-        -webkit-transform: translateY(-1);
-        -moz-transform: translateY(-1);
-     }
-.drawerToggle:hover > div.line-3, .drawerToggle:focus > div.line-3 {
-      transform: translateY(1);
-      -webkit-transform: translateY(1);
-      -moz-transform: translateY(1);
-}   */
-
-  div.toolbar.show-menu div.drawerToggle div.dt-line-1 {
-      transform: translateY(12px) translateX(0) rotate(45deg);
-      -webkit-transform: translateY(12px) translateX(0) rotate(45deg);
-      -moz-transform: translateY(12px) translateX(0) rotate(45deg);
-    }
-    div.toolbar.show-menu div.drawerToggle div.dt-line-2 {
-      opacity:0;
-    }
-    div.toolbar.show-menu div.drawerToggle div.dt-line-3 {
-      transform: translateY(-12px) translateX(0) rotate(-45deg);
-      -webkit-transform: translateY(-12px) translateX(0) rotate(-45deg);
-      -moz-transform: translateY(-12px) translateX(0) rotate(-45deg);
-    }
+div.toolbar.show-menu div.drawerToggle div.dt-line-1 {
+    -ms-transform: translateY(12px) translateX(0) rotate(45deg);
+        transform: translateY(12px) translateX(0) rotate(45deg);
+    -webkit-transform: translateY(12px) translateX(0) rotate(45deg);
+    -moz-transform: translateY(12px) translateX(0) rotate(45deg);
+  }
+  div.toolbar.show-menu div.drawerToggle div.dt-line-2 {
+    opacity:0;
+  }
+  div.toolbar.show-menu div.drawerToggle div.dt-line-3 {
+    -ms-transform: translateY(-12px) translateX(0) rotate(-45deg);
+        transform: translateY(-12px) translateX(0) rotate(-45deg);
+    -webkit-transform: translateY(-12px) translateX(0) rotate(-45deg);
+    -moz-transform: translateY(-12px) translateX(0) rotate(-45deg);
+  }
 
 
 
 div.drawerToggle > div.dt-line-1 {
-  top:0;
+top:0;
 }
 div.drawerToggle > div.dt-line-2 {
-  top:50%;
+top:50%;
 }
 div.drawerToggle > div.dt-line-3 {
-  top:100%;
+top:100%;
 }
 }
