--- a/src/components/Shop/Controls/Control/Control.css
+++ b/src/components/Shop/Controls/Control/Control.css
@@ -43,9 +43,15 @@ div.gallery-control-container div.select-container div.select-options-wrapp div.
 }
 
 div.select-svg-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 10%;
     height: 100%;
     margin-left: 1px;
@@ -59,6 +65,8 @@ div.gallery-control-container div.select-container div.select-options-wrapp div.
     height: 0;
     /* overflow: hidden; */
     cursor: pointer;
+    -webkit-transition: height 0.1s ease-in-out, z-index .5s;
+    -o-transition: height 0.1s ease-in-out, z-index .5s;
     transition: height 0.1s ease-in-out, z-index .5s;
 }
 
@@ -68,17 +76,26 @@ div.gallery-control-container div.select-container.show div.select-options-wrapp
 }
 
 div.gallery-control-container div.select-container div.select-options-wrapp div.select-options-container div.option{
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     padding-left: 10px;
     color: darkgray;
     background: white;
     opacity: 0;
+    -webkit-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
 }
 
 div.gallery-control-container div.select-container div.select-options-wrapp div.select-options-container div.option:hover svg{
-    transform: rotate3d(0, 1, 0, 180deg);
+    -webkit-transform: rotate3d(0, 1, 0, 180deg);
+            transform: rotate3d(0, 1, 0, 180deg);
+    -webkit-transition: -webkit-transform 0.8s;
+    transition: -webkit-transform 0.8s;
+    -o-transition: transform 0.8s;
     transition: transform 0.8s;
+    transition: transform 0.8s, -webkit-transform 0.8s;
 }
 
 
@@ -117,9 +134,15 @@ div.gallery-control-container div.select-container div.select-options-wrapp div.
 div.gallery-control-container div.control-box{
     /* position: relative;
     z-index: 3; */
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 100%;
     height: 2.5rem;
     margin-top: 4px;
