--- a/src/components/Shop/Controls/Controls.css
+++ b/src/components/Shop/Controls/Controls.css
@@ -1,8 +1,17 @@
 div.gallery > div.gallery-controls{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 0;
     padding-top: 10px;
     width: 100%;
@@ -10,8 +19,14 @@ div.gallery > div.gallery-controls{
 
 @media only screen and (min-width: 600px){
     div.gallery > div.gallery-controls{
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: flex-start;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
     }
 }
