--- a/src/components/UI/Carousels/Carousels.css
+++ b/src/components/UI/Carousels/Carousels.css
@@ -20,6 +20,8 @@ div.carousel{
     width: 100%;
     height: 100%;
     opacity: 0;
+    -webkit-transition: opacity 0.5s ease-in-out;
+    -o-transition: opacity 0.5s ease-in-out;
     transition: opacity 0.5s ease-in-out;
 }
 .carousel > div.slide-container > img.slide.current{
@@ -27,17 +29,25 @@ div.carousel{
 }
 
 .carousel div.arrow{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: absolute;
     top: 50%;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 2rem;
     height: 2rem;
     background: black;
     font-size: 1.5rem;
     cursor: pointer;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
     z-index: 2;
 }
 .carousel div.arrow.left{
@@ -55,5 +65,4 @@ div.carousel{
         max-width: 600px;
     }
 }
-
 
