--- a/src/components/UI/GoToTopBtn/GoToTopBtn.css
+++ b/src/components/UI/GoToTopBtn/GoToTopBtn.css
@@ -1,7 +1,13 @@
 div.top-btn{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: fixed;
     z-index: 900;
     bottom: 215px;
@@ -14,12 +20,16 @@ div.top-btn{
     opacity: 0;
     visibility: hidden;
     cursor: pointer;
+    -webkit-transition: opacity 0.4s;
+    -o-transition: opacity 0.4s;
     transition: opacity 0.4s;
 }
 
 div.top-btn:hover{
     border: 1px solid #e6e6e6;
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
 }
 div.top-btn svg{
     color: #cccccc;
