--- a/src/components/UI/ImgLoader/ImgLoader.css
+++ b/src/components/UI/ImgLoader/ImgLoader.css
@@ -1,12 +1,13 @@
-
 div.img-loader-container{
     position: relative;
     display: inline-block;
     padding: 10px;
     margin: 10px;
-    perspective: 500px;
+    -webkit-perspective: 500px;
+            perspective: 500px;
     cursor: pointer;
-    transform: translateZ(-20px);
+    -webkit-transform: translateZ(-20px);
+            transform: translateZ(-20px);
 }
 
 div.img-loader-container > img.img{
@@ -16,6 +17,8 @@ div.img-loader-container > img.img{
     height: auto;
     padding: 10px;
     opacity: 0;
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
     transition: opacity 0.5s;
 }
 
@@ -30,16 +33,16 @@ div.img-loader-container::after{
     border: 1px solid darkgrey;
     /* opacity: 1; */
     /* transition: opacity 0.2s; */
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
 
 div.img-loader-container:hover::after{
-    /* opacity: 0; */
     top: -10px;
     left: -10px;
     width: calc(100% + 20px);
     height: calc(100% + 15px);
-    /* border: 1px solid darkgrey; */
 }
 
 div.img-loader-container.loaded > img.img{
@@ -47,13 +50,21 @@ div.img-loader-container.loaded > img.img{
 }
 
 div.img-loader-container > div.loader-back{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: absolute;
     top: 0;
     max-width: 100%;
     opacity: 1;
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
     transition: opacity 0.5s;
 }
 
@@ -73,7 +84,9 @@ div.img-loader-container > div.loader-back > .svg-wrapp > svg{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
 
 
@@ -84,18 +97,18 @@ div.img-loader-container.loaded > div.loader-back{
 
 
 
-/* div.img-comtainer:hover{
-    background: gray;
-} */
-
-
-
 div.img-loader-container img{
-    box-shadow: 0 0 4px inset white;
+    -webkit-box-shadow: 0 0 4px inset white;
+            box-shadow: 0 0 4px inset white;
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    -o-transition: transform 0.3s;
     transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s;
 }
 div.img-loader-container:hover img {
-    transform: translateZ(15px);
+    -webkit-transform: translateZ(15px);
+            transform: translateZ(15px);
 }
 
 @media only screen and (min-width: 400px){
@@ -103,6 +116,3 @@ div.img-loader-container:hover img {
         margin-top: auto;
     }
 }
-
-
-
