--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -1,9 +1,18 @@
 p.input-container{
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 label.label{
@@ -15,13 +24,11 @@ label.label{
 
 div.inViewListener label.label{
     opacity: 0;
+    -webkit-transition: opacity 0.6s;
+    -o-transition: opacity 0.6s;
     transition: opacity 0.6s;
-    /* position: relative;
-    left: -100%;
-    transition: left 0.4s; */
 }
 div.inViewListener.show-component label.label{
-    /* left: 0; */
     opacity: 1;
 }
 
@@ -29,7 +36,8 @@ input.input,
 textarea.input {
     width: 100%;
     background: rgba(255,255,255, 0.3);
-    box-shadow: inset 0 0 5px #660033;
+    -webkit-box-shadow: inset 0 0 5px #660033;
+            box-shadow: inset 0 0 5px #660033;
 }
 
 input.input.invalid,
