--- a/src/components/UI/Line/Line.css
+++ b/src/components/UI/Line/Line.css
@@ -1,16 +1,21 @@
 div.line{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: absolute;
     top: 0;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 100%;
 
 }
 
 div.line > span {
     width: 100%;
-    /* width: 30%; */
     border: 1px double black;
     display: inline-block;
     height: 4px;
