--- a/src/components/UI/ParagraphContainer/ParagraphContainer.css
+++ b/src/components/UI/ParagraphContainer/ParagraphContainer.css
@@ -15,12 +15,13 @@ div.home-carousel > div.home-carousel-text-wrapp > div.paragraph-container{
 
 .paragraph-container h3{
     position: relative;
-    /* left: -100vw; */
     margin: 0px;
     margin-bottom: 5px;
     font-size: 2.5rem;
     font-weight: 500;
     text-align: left;
+    -webkit-transition: left 0.7s;
+    -o-transition: left 0.7s;
     transition: left 0.7s;
 }
 
@@ -54,7 +55,8 @@ div.home-carousel > div.home-carousel-text-wrapp > div.paragraph-container > p {
 @media only screen and (min-width: 768px){
     div.home-carousel > div.home-carousel-text-wrapp > div.paragraph-container > p {
         overflow: hidden;
-        text-overflow: ellipsis;
+        -o-text-overflow: ellipsis;
+           text-overflow: ellipsis;
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
@@ -63,7 +65,8 @@ div.home-carousel > div.home-carousel-text-wrapp > div.paragraph-container > p {
         left: -100%;
     }
     div.about .inViewListener.show-component .paragraph-container h3{
-        /* left: -100%; */
+        -webkit-transition: left 0.5s ease-in-out;
+        -o-transition: left 0.5s ease-in-out;
         transition: left 0.5s ease-in-out;
     }
     div.home-carousel > div.home-carousel-text-wrapp > div.paragraph-container{
