--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 html {
   position: relative;
   width: 100%;
-  /* height: 100vh; */
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -27,13 +27,12 @@ body {
 
 
 *, *:before, *:after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 
 main {
   position: relative;
-  /* top: -20px; */
   width: 100%;
-  /* background: black; */
 }
