--- a/src/components/Contacts/Contacts.css
+++ b/src/components/Contacts/Contacts.css
@@ -2,7 +2,8 @@
     position: relative;
     z-index: 3;
     width: 100%;
-    min-height: calc(100vh - 58px);
+    /* min-height: calc(100vh - 58px); */
+    min-height: 100vh;
     padding: 13px 10px 0 10px;
     background: rgba(0,0,0,1);
     color: gray;
@@ -15,8 +16,18 @@ div.contacts::after{
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../../assets/images/map-of-the-world-2401458_1920.jpg');
+    /* background-image: url('../../assets/images/map-of-the-world-2401458_640.jpg');
     background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover; */
+
+    background: url('../../assets/images/map-of-the-world-2401458_640.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
     -webkit-filter: grayscale(80%);
             filter: grayscale(80%);
     z-index: -1;
@@ -191,7 +202,8 @@ div.contacts > div.contacts-wrapp div.contact-btn-container .btn{
 @media only screen and (min-width: 992px){
     div.contacts{
         padding-top: 65px;
-
     }
-    
+    div.contacts::after{
+        background: url('../../assets/images/map-of-the-world-2401458_1920.jpg') no-repeat center center fixed;
+    }
 }
