--- a/src/components/UI/Spinner/Spinner.css
+++ b/src/components/UI/Spinner/Spinner.css
@@ -1,3 +1,31 @@
+div.gallery div.loader-container,
+div.fancyGallery-gallery div.loader-container{
+  position: absolute;
+  width: 100%;
+  opacity: 1;
+  transition: opacity 3s;
+}
+
+div.spinner-container > div.loader-container{
+  opacity: 0;
+}
+
+div.gallery div.g-img-container,
+div.fancyGallery-gallery div.g-img-container{
+  width: 100%;
+  opacity: 1;
+  transition: opacity 3s ease-in-out;
+}
+
+div.gallery div.g-img-container.hidden,
+div.fancyGallery-gallery div.g-img-container.hidden{
+  opacity: 0;
+}
+
+
+
+
+
 .loader-container{
     height: 15em;
 }
