--- a/src/components/404/404.css
+++ b/src/components/404/404.css
@@ -6,7 +6,7 @@ div.notFound{
     bottom: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: calc(100vh - 9rem);
@@ -16,7 +16,7 @@ div.notFound{
 div.notFound > span{
     display: inline-block;
     width: 100%;
-    padding: 0.5rem 0;
+    padding: 0.5rem;
     font-size: 5rem;
     font-family: 'Architects Daughter', cursive;
     line-height: 5rem;
