--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -78,6 +78,10 @@ div.about div.about-img-container {
         -ms-flex-item-align: end;
             align-self: flex-end;
     }
+    .about-header-container{
+        margin-bottom: 70px;
+    }
+
     div.about div.about-img-container{
         position: absolute;
         top: 0;
@@ -120,4 +124,7 @@ div.about div.about-img-container {
         padding-top: 5rem;
         min-height: 100vh;
     }
+.about-header-container{
+margin-bottom: 90px;
+}
 }
