--- a/src/components/Home/Parallax/Parallax.css
+++ b/src/components/Home/Parallax/Parallax.css
@@ -1,10 +1,14 @@
 .parallax-text-container{
     position: absolute;
     top: calc(50vh - 8rem);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 3rem;
-    line-height: 3rem;
-    font-size: 3rem; 
+    height: 2.5rem;
+    line-height: 2.5rem;
+    font-size: 2.5rem; 
     font-family: 'Xanh Mono', monospace;
     text-align: center;
     letter-spacing: 0.5rem;
@@ -47,6 +51,15 @@ span.f{
 }
 span.ff{
     transform: rotate(20deg);
+}
+
+
+@media only screen and (min-width: 400px){
+    .parallax-text-container{
+        height: 3rem;
+        font-size: 3rem;
+        line-height: 3rem;
+    }
 }
 
 @media only screen and (min-width: 992px){
